[package]
name = "postgres-syntax"
version = "0.3.0"
edition = "2021"
description = "Compile-time syntax checking of PostgreSQL queries"
authors = ["Jasper Hugo <jasper@avstack.io>"]
license = "MIT/Apache-2.0"
repository = "https://github.com/avstack/postgres-syntax"
documentation = "https://docs.rs/postgres-syntax/"
readme = "README.md"

[lib]
proc-macro = true

[dependencies]
pg_query = { version = "5.1", default-features = false }
litrs = { version = "0.4", default-features = false }
quote = { version = "1", default-features = false, features = ["proc-macro"] }
